--- a/c/co/con/consumerdepot.com.html
+++ b/c/co/con/consumerdepot.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the consumerdepot.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603065328id_/http%3A//www.consumerdepot.com/policynew.asp%3FPage%3Dpriv) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the consumerdepot.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207044727id_/http%3A//www.consumerdepot.com/policynew.asp%3FPage%3Dpriv) for the most accurate reproduction.-->
 
 <html><head>
 <title>Consumer depot Policies</title>
@@ -296,39 +296,39 @@ text-decoration: none;
             <div align="center"> <img src="images/100430290.jpg" alt="More Info: Radeon 7000 64MB PCI Video Card" width="50" height="50" border="0"><br>
               <font face="ARIAL,HELVETICA" color="#666666" size="1">Radeon 7000 64MB PCI Video Card&nbsp; 
               </font><br>
-              <font face="ARIAL,HELVETICA" color="#000000" size="4">$49.00</font></div>
+              <font face="ARIAL,HELVETICA" color="#000000" size="4">$29.99</font></div>
             </a></td>
         </tr>
         <tr> 
-          <td><a style="TEXT-DECORATION: none" href="products.asp?id=125"> 
-            <div align="center"> <img src="images/125.jpg" alt="More Info: Model 125 Timeclock Recorder" width="50" height="50" border="0"><br>
-              <font face="ARIAL,HELVETICA" color="#666666" size="1">Model 125 Timeclock Recorder&nbsp;Heavy Duty Time 
+          <td><a style="TEXT-DECORATION: none" href="products.asp?id=100-430321R"> 
+            <div align="center"> <img src="images/100-430321R.jpg" alt="More Info: Radeon 7000 32MB DDR PCI Video Card" width="50" height="50" border="0"><br>
+              <font face="ARIAL,HELVETICA" color="#666666" size="1">Radeon 7000 32MB DDR PCI Video Card&nbsp; 
               </font><br>
-              <font face="ARIAL,HELVETICA" color="#000000" size="4">$149.00</font></div>
+              <font face="ARIAL,HELVETICA" color="#000000" size="4">$24.24</font></div>
             </a></td>
         </tr>
         <tr> 
-          <td><a style="TEXT-DECORATION: none" href="products.asp?id=28101148R"> 
-            <div align="center"> <img src="images/28101148.jpg" alt="More Info: PhotoDeluxe 4.0 Home Edition" width="50" height="50" border="0"><br>
-              <font face="ARIAL,HELVETICA" color="#666666" size="1">PhotoDeluxe 4.0 Home Edition&nbsp;Windows 
+          <td><a style="TEXT-DECORATION: none" href="products.asp?id=10G2150VO"> 
+            <div align="center"> <img src="images/10G2150.jpg" alt="More Info: T630  Laser Printer 35 ppm 1200 dpi" width="50" height="50" border="0"><br>
+              <font face="ARIAL,HELVETICA" color="#666666" size="1">T630  Laser Printer 35 ppm 1200 dpi&nbsp;Open Toner 1200 dpi 35 ppm 1200 dpi 
               </font><br>
-              <font face="ARIAL,HELVETICA" color="#000000" size="4">$5.99</font></div>
+              <font face="ARIAL,HELVETICA" color="#000000" size="4">$499.00</font></div>
             </a></td>
         </tr>
         <tr> 
-          <td><a style="TEXT-DECORATION: none" href="products.asp?id=30001521R"> 
-            <div align="center"> <img src="images/30001521.jpg" alt="More Info: Xtasy GeForce4 MX420 AGP Video Card" width="50" height="50" border="0"><br>
-              <font face="ARIAL,HELVETICA" color="#666666" size="1">Xtasy GeForce4 MX420 AGP Video Card&nbsp;64 MB SDRAM / VGA TV Out 
+          <td><a style="TEXT-DECORATION: none" href="products.asp?id=17M0000RN"> 
+            <div align="center"> <img src="images/17M0000A.jpg" alt="More Info: X1150 Printer - All-in-One Printer" width="50" height="50" border="0"><br>
+              <font face="ARIAL,HELVETICA" color="#666666" size="1">X1150 Printer - All-in-One Printer&nbsp;No INK 
               </font><br>
-              <font face="ARIAL,HELVETICA" color="#000000" size="4">$45.00</font></div>
+              <font face="ARIAL,HELVETICA" color="#000000" size="4">$25.00</font></div>
             </a></td>
         </tr>
         <tr> 
-          <td><a style="TEXT-DECORATION: none" href="products.asp?id=3004817M"> 
-            <div align="center"> <img src="images/3004817.jpg" alt="More Info: Cel 2.4 GHZ 256/30G DVD/CDRW" width="50" height="50" border="0"><br>
-              <font face="ARIAL,HELVETICA" color="#666666" size="1">Cel 2.4 GHZ 256/30G DVD/CDRW&nbsp;15 IN TFT 56K NIC XP Home 
+          <td><a style="TEXT-DECORATION: none" href="products.asp?id=2373-8CU"> 
+            <div align="center"> <img src="images/2373-8CU.jpg" alt="More Info: ThinkPad T40 2373 P-M 1.5GHz 256MB" width="50" height="50" border="0"><br>
+              <font face="ARIAL,HELVETICA" color="#666666" size="1">ThinkPad T40 2373 P-M 1.5GHz 256MB&nbsp;40GB 8x DVD NIC 56K 14.1TFT XP-P 
               </font><br>
-              <font face="ARIAL,HELVETICA" color="#000000" size="4">$799.00</font></div>
+              <font face="ARIAL,HELVETICA" color="#000000" size="4">$1,099.00</font></div>
             </a></td>
         </tr>
         <tr> 
@@ -362,7 +362,7 @@ update=copyright.getYear();
 
 document.write("Copyright © 2000-"+ update + " Consumer Depot, L.L.C., All rights reserved");
 </script>Copyright © 2000-120 Consumer Depot, L.L.C., All rights reserved</u></font></a></b></td>
-    <td height="65" width="130" align="CENTER" valign="BOTTOM"><a href="javascript:popUp1('https://digitalid.verisign.com/as2/a1e61ab8570c5c80edf7c914e08cbad9')"><img src="images/verisignseals/seal1.gif" width="80" height="80" border="0"></a><br>
+    <td height="65" width="130" align="CENTER" valign="BOTTOM"><script src="https://seal.verisign.com/getseal?host_name=www.consumerdepot.com&amp;size=S&amp;use_flash=YES&amp;use_transparent=yes"></script><br>
     </td>
   </tr>
 </tbody></table>
