--- a/p/pr/pro/proxyway.com.html
+++ b/p/pr/pro/proxyway.com.html
@@ -1,38 +1,45 @@
-<!--The following is the downloaded HTML source of the proxyway.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607054022id_/http%3A//www.proxyway.com/www/info/proxyway-privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the proxyway.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207050313id_/http%3A//www.proxyway.com/www/info/proxyway-privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Anonymous surfing, Anonymous web surfing, Free anonymous surfing, Free anonymous web surfing,  
 	Surf Anonymous, Anonymous internet surfing, Anonymous Surfing web, Anonymous Proxy Surfing, Anonymous proxy web surfing, Anonymous surfing software, Anonymous proxy software, Anonymous software surfing web, Proxy server surfing, Anonymous software surfing web</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"></head><body><http-equiv="pragma" content="NO-CACHE">
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"></head><body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0"><http-equiv="pragma" content="NO-CACHE">
 	<meta name="Description" content="Anonymous surfing. Anonymous web surfing. Free anonymous surfing Free anonymous web surfing. Surf Anonymous Anonymous internet surfing Anonymous Surfing web, Anonymous Proxy Surfing, Anonymous proxy web surfing. Anonymous surfing software, Anonymous proxy software, Anonymous software surfing web, Proxy server surfing, Anonymous surfing software by ProxyWay.com">
  	<meta name="Keywords" content="Anonymous, surfing, web surfing, surf, browsing, anonymous surfing web, anonymous complete surfing web, anonymous proxy surfing, proxy, anonymously, proxy server, anonymous surf proxy, anonymous software surfing web, proxy list, free proxy list, anonymous proxy list, proxy server list, free proxy server list, proxy server, free proxy, anonymous proxy, free proxy server, free proxy list, web proxy, anonymous proxy server, public proxy, Anonymous, SOCKS4, SOCKS5, HTTP">
-	<!--header-->
+		<!--header-->
+	<link rel="SHORTCUT ICON" href="http://www.proxyway.com/favicon.ico">
 	<link href="http://www.proxyway.com/www/global.css" rel="stylesheet">
-	<script language="Javascript" src="http://www.proxyway.com/cgi-bin/mainscript.js" type="text/javascript"></script>
-	<meta http-equiv="Set-Cookie" content="USERID=23241086599575H; expires=Tuesday, 07-06-2005 02:12:55 GMT;	; path=/; domain=www.proxyway.com">
-	<!--header-->
+	<script language="Javascript" src="http://www.proxyway.com/mainscript.js" type="text/javascript"></script>
+	<meta http-equiv="Set-Cookie" content="USERID=11571102395751Z; expires=Tuesday, 06-12-2005 23:02:31 GMT;	; path=/; domain=www.proxyway.com">
+<!--header-->
 
 
+<!--1-->
 
-<!--Anonymous proxy surfing software to surf web anonymously-->
-<table border="0" cellpadding="0" cellspacing="0" width="1024" height="100%" align="center" valign="top" summary="Anonymous surfing software to surf web anonymously">
+<!--Anonymous proxy surfing software to surf web anonymously clear traces, temporary internet files and history hide IP-->
+<table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%" align="left" valign="top" summary="Proxy Way service use Proxy Servers Chain/Cascade to Stay Invisible, Hide your/my IP and surf web anonymously">
 	<tbody><tr height="100%" valign="top"><td width="1024">
-<!--part1-->
 	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="1024" align="left" summary="Anonymous surfing software to surf internet anonymously">
-		<!--1-->
 		<tbody><tr height="60"><td background="http://www.proxyway.com/www/image/site/dot1.gif" colspan="3">
 		<table border="0" cellpadding="0" cellspacing="0" width="1024" height="22" summary="Anonymous web surfing">
 			<tbody><tr>
 			<td width="300"><a href="http://www.proxyway.com"><img border="0" align="middle" src="http://www.proxyway.com/www/image/site/proxyway.gif" alt="ProxyWay.com Home"></a></td>
-			<td width="503" align="center" bgcolor="385081"><font color="FEB313" size="8">Be safe. Be hidden.</font></td>
+			<td width="503" align="right" bgcolor="385081">
+			<table border="0" cellpadding="0" cellspacing="0" width="100%" summary="Anonymous web surfing" align="right">
+				<tbody><tr><td align="right"><b>&nbsp;Local Time:&nbsp;Mon., December 6, 2004   11:02 PM</b></td></tr>
+				<tr><td id="Title" align="right"><font color="FEB313">Be safe. Be hidden.&nbsp;&nbsp;</font></td></tr>
+				<tr><td align="right"><b><script language="javascript"> today=new Date(); if (today.toLocaleString() != null) document.writeln("Your local time: "+today.toLocaleString()); </script>Your local time: 1/30/2020, 4:46:29 PM
+</b></td></tr>
+			</tbody></table>
+			</td>
 			<td width="80" align="center" bgcolor="385081"><img border="0" align="middle" src="http://www.proxyway.com/www/image/site/man2.gif" alt="Anonymous internet surfing"></td>
 			<td width="23" rowspan="2"><img border="0" align="middle" src="http://www.proxyway.com/www/image/site/corner_r1.gif"></td>
 			<td width="147">&nbsp;</td>
 			</tr>
 		</tbody></table>
 		</td></tr>
-		<!--1-->
+<!--1-->
 		<!--2-->
 		<tr height="27"><td background="http://www.proxyway.com/www/image/site/dot1.gif" colspan="3">
 		<table border="0" cellspacing="0" cellpadding="0" width="1024" height="22" summary="Surf web anonymously">
@@ -41,12 +48,12 @@
 			<td align="left" width="458" background="http://www.proxyway.com/www/image/site/orange1.gif" bgcolor="385081">
 				<img border="0" align="middle" src="http://www.proxyway.com/www/image/site/yellow.gif"><a href="http://www.proxyway.com">&nbsp;&nbsp;&nbsp;<font color="ffffff">Home</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<img border="0" align="middle" src="http://www.proxyway.com/www/image/site/yellow.gif">
-				<a href="http://www.morun.net/www/products/">
+				<a href="http://www.proxyway.com/www/products.html">
 				<font color="ffffff">&nbsp;&nbsp;&nbsp;Products</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<img border="0" align="middle" src="http://www.proxyway.com/www/image/site/yellow.gif">
 				<a href="http://www.proxyway.com/www/downloads/"><font color="ffffff">&nbsp;&nbsp;&nbsp;Downloads</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<img border="0" align="middle" src="http://www.proxyway.com/www/image/site/yellow.gif">
-				<a href="http://www.morun.net/www/purchase/"><font color="ffffff">&nbsp;&nbsp;&nbsp;Purchase</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="http://www.proxyway.com/www/purchase/"><font color="ffffff">&nbsp;&nbsp;&nbsp;Purchase</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<img border="0" align="middle" src="http://www.proxyway.com/www/image/site/yellow.gif">
 				<a href="http://www.proxyway.com/www/anonymous proxy surfing.html#anonymous proxy surfing"><font color="ffffff">&nbsp;&nbsp;&nbsp;Support</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</td>
@@ -94,11 +101,9 @@
 					By using this site, you accept all the terms and conditions of the ProxyWay.com Privacy Policy. The purpose of ProxyWay.com Privacy Policy is to inform you what kinds of information we may gather about you when you visit ProxyWay.com and how we may use it, whether we may disclose gathered information to anyone, and your ability to change the information. This privacy practice applies only to ProxyWay.com, and not to other web sites to which we may link. If you do not agree to this policy, please do not use the site.<br>
 					ProxyWay.com respects your desire for privacy and ensures that your personal information submitted to ProxyWay.com is handled in a safe and responsible manner.<br>
 					<b>Information Collection and Use</b><br>
-					ProxyWay.com does not collect any personal information about you except when you specifically provide it to us. Personal information our customers provide us is used to provide you with updated information on our products, help us process payment and send registration information to customers. The personal of our customers collected on this site will not be shared with our partners or third parties and will be used for administrative and identification purposes only.<br>		
+					ProxyWay.com does not collect any personal information about you except when you specifically provide it to us. Personal information provided by our customers is used to provide updated information on our products, help us process payment and send activation information to customers. Personal information collected on this site will not be shared with our partners or third parties and will be used for administrative and identification purposes only.<br>		
 					We may use the information we gather to understand our users base more to improve the quality of our services; customize the advertising and content you see; send you information you agreed to receive about specials and new products and services, which you might be interested; perform your requests for certain products and services.<br>
-					customers automatically gathers and records usage information such as browser type, browser language, and IP address with each query; numbers and frequency of visits to customers and its areas. This data is used to help us determine how much our visitors use specific parts of our site, so we can improve our site.<br>
-					When a ProxyWay.com web page is requested and viewed, that request is recorded on our servers with information including the IP address of the computer that requested the page. Your IP address is stored in our databases and may be used to estimate the total number of users visiting ProxyWay.com from specific countries or regions of the world.<br>
-					Sometimes, ProxyWay.com may request more specific information about our users in the form of surveys (voluntary).<br>
+					We automatically gather and record usage information such as browser type, browser language, and IP address with each query. This data is used to estimate the total number of users visiting ProxyWay.com from specific countries or regions of the world. Sometimes, ProxyWay.com may request more specific information about our users in the form of surveys (voluntary).<br>
 					<b>Cookies</b><br> 
 					Upon your first visit ProxyWay.com, ProxyWay.com sends a "cookie" to your computer. A cookie is a piece of data which often includes an unique identifier, that is sent to your browser from a web site's computers, stored on your computer and identifies you as a unique user.<br>
 					ProxyWay.com uses cookies and tracking technologies to estimate and report our total audience size and traffic; accumulate and report aggregated statistical information about ProxyWay.com site and advertisement usage; keep count of return visits to our site, determine our users interests and keep track of preferences you specify while you are using ProxyWay.com.<br>
@@ -110,6 +115,7 @@
 					ProxyWay.com may share aggregated statistical information about our users with advertisers, business partners, and other third parties. We do not share personal information that you may give us to any third-parties. However, ProxyWay.com may share personal identifiable information about you to other companies or people to provide the service you have requested.<br>
 					Your information may be disclosed if we have a good faith belief that we are required to do so by law or legal process, to respond to claims, or to protect the rights, property, or safety of ProxyWay.com.<br>
 					If, at any time, ProxyWay.com is going to use your personal identifiable information in a manner different from that stated at the time of collection, we will notify you via email. You will have a choice if we may use your information in this different manner or not.<br>
+					WARNING: ProxyWay.com reserves the right to report any unauthorized or fraudulent credit card purchases to collection agents, reporting agencies and law enforcement authorities for investigation, recovery of economic damages, and/or criminal prosecution. Users of unauthorized or fraudulent credit cards hereby consent to ProxyWay.com's disclosure of such user's identity, subscriber information, and scope and content of Internet use to any such third parties. Furthermore, the users of unauthorized or fraudulent credit cards hereby acknowledge and agree that ProxyWay.com will not be responsible for, and is hereby released from, all consequences arising out of further disclosure of such user's information following ProxyWay.com's initial release of such data to any collection agent, reporting agency or law enforcement authority.<br>
 					<b>Links to other sites</b><br> 
 					ProxyWay.com provides links to third-party sites, which are not under the control of ProxyWay.com. ProxyWay.com is not responsible for the content and privacy policy on third-party sites.<br>
 					<b>Changes to the Privacy Policy</b><br>
@@ -117,6 +123,7 @@
 					</td></tr>
 				</tbody></table>
 				</td></tr>
+<!--LastLine-->
 				<tr height="100%" valign="top"><td>&nbsp;</td></tr>
 				<tr height="40" valign="bottom">
 				<td width="723" colspan="2">
@@ -124,15 +131,16 @@
 					<tbody><tr height="3" valign="bottom"><td width="723" background="http://www.proxyway.com/www/image/site/orange_new.gif"></td></tr>
 					<tr height="9" valign="top"><td width="723" background="http://www.proxyway.com/www/image/site/dot1.gif"></td></tr>
 					<tr height="28" valign="top">
-					<td width="723" background="http://www.proxyway.com/www/image/site/dot1.gif">&nbsp;&nbsp;<font color="263656">Copyright ©2004 MoRUN.net&nbsp;All rights reserved.</font>&nbsp;&nbsp;<a href="http://www.proxyway.com/www/info/proxyway-terms.html">Terms of Use</a>&nbsp;&nbsp;<a href="http://www.proxyway.com/www/info/proxyway-privacy.html">Privacy Policy</a></td>
+					<td width="723" background="http://www.proxyway.com/www/image/site/dot1.gif">&nbsp;&nbsp;<font color="263656">Copyright ©2004 ProxyWay.com&nbsp;All rights reserved.</font>&nbsp;&nbsp;<a href="http://www.proxyway.com/www/info/proxyway-terms.html">Terms of Use</a>&nbsp;&nbsp;<a href="http://www.proxyway.com/www/info/proxyway-privacy.html">Privacy Policy</a></td>
 					</tr>
 				</tbody></table>
 				</td>
 				</tr>
+<!--LastLine-->
 			</tbody></table>
 			</td>
-<!--m1-->	
-<!--m2-->	
+<!--m1-->
+<!--m2-->
 			<td width="225" valign="top">
 			<table border="0" width="225" height="100%" valign="top" cellpadding="0" cellspacing="0" bordercolor="#8A92A7" summary="Anonymous surfing web Surf anonymously">
 				<tbody><tr height="30">
@@ -290,18 +298,21 @@
 					</tr>
 				</tbody></table>
 				</td></tr>
- <!--footer-->
+<!--footer-->
 			</tbody></table>
 			</td>
-<!--m2-->	
+			<!--m2-->	
 			<td width="77" background="http://www.proxyway.com/www/image/site/dot1.gif"></td>
 			</tr>
 		</tbody></table>
 		</td></tr>
-<!--footer-->
 	</tbody></table>
-	</td></tr>
+	</td>
+	<td width="3" background="http://www.proxyway.com/www/image/site/orange-dot.gif">&nbsp;</td>
+	<td width="100%" bgcolor="#385081"></td>
+	</tr>
 </tbody></table> 
 
+<!--footer-->
 
 </http-equiv="pragma"></body></html>
