--- a/e/es/esp/espc.com.html
+++ b/e/es/esp/espc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the espc.com privacy policy that was archived on 2004-06-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040609151719id_/http%3A//www.espc.com/information/privacy_statement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the espc.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207052408id_/http%3A//www.espc.com/information/privacy_statement.asp) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/ESPC Homeline Template.dwt" --><head>
 
@@ -12,7 +12,7 @@ function GoAdvert(iAdvertID)
 var TargetHRef;
 TargetHRef = "/Advert.asp?AdvertId="+iAdvertID;
 TargetHRef = TargetHRef + "&From=";
-TargetHRef = TargetHRef + "&GUID=B9F68E0A-805A-4216-8E49-F4C5E0F84753";
+TargetHRef = TargetHRef + "&GUID=9A1E72E0-D73B-4970-8FFC-3989B329B84D";
 location.href = TargetHRef;
 }
 function AppendSessionID(TargetHRef) 
@@ -20,9 +20,9 @@ function AppendSessionID(TargetHRef)
 // append the session id to the URL that is being  submitted 
 // If there is no ? in the string then add one one
 if (TargetHRef.indexOf("?") == -1)
-	{TargetHRef = TargetHRef + "?GUID=B9F68E0A-805A-4216-8E49-F4C5E0F84753";}
+	{TargetHRef = TargetHRef + "?GUID=9A1E72E0-D73B-4970-8FFC-3989B329B84D";}
 else 
-	{TargetHRef = TargetHRef + "&GUID=B9F68E0A-805A-4216-8E49-F4C5E0F84753";} 
+	{TargetHRef = TargetHRef + "&GUID=9A1E72E0-D73B-4970-8FFC-3989B329B84D";} 
 // redirect to the required page ---
 location.href = TargetHRef;
 }
@@ -51,7 +51,7 @@ var iMenuToOpen = -1;
     </td>
     <td align="left" class="small" nowrap="" width="150"> 
       <p class="propcount">We currently have<br>
-        4242
+        4255
         properties <br>
         for sale or to let</p>
     </td>
@@ -82,11 +82,11 @@ var iMenuToOpen = -1;
         <img src="/images/main/folder_closed.gif" width="15" height="11" align="absmiddle"><span class="MenuLevel1">Login</span><br>
         <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/login.asp')" class="sublinks">Login 
         Now</a> <br>
-        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/default.asp?Now=0.6016809')" class="sublinks">Your 
+        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/default.asp?Now=0.2027857')" class="sublinks">Your 
         Homeline</a><br>
-        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/portfolio.asp?Now=0.7356488')" class="sublinks">Your 
+        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/portfolio.asp?Now=0.9635845')" class="sublinks">Your 
         Portfolio</a><br>
-        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/property_match.asp?Now=0.3009694')" class="sublinks">Your 
+        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/property_match.asp?Now=0.523412')" class="sublinks">Your 
         Matches</a><br>
         <img src="/images/main/folder_closed.gif" width="15" height="11" align="absmiddle"><span class="MenuLevel1">Information</span><br>
         <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/property_catalogue/default.asp')" class="sublinks">Search 
