--- a/m/mo/mod/modells.com.html
+++ b/m/mo/mod/modells.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the modells.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603085939id_/http%3A//www.modells.com/helpdesk/index.jsp%3Fdisplay%3Dsafety%26subdisplay%3Dprivacy%26clickid%3Dbody_privacy_txt) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the modells.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207053228id_/http%3A//www.modells.com/helpdesk/index.jsp%3Fdisplay%3Dsafety%26subdisplay%3Dprivacy%26clickid%3Dbody_privacy_txt) for the most accurate reproduction.-->
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 
@@ -14,8 +14,8 @@
 <body bgcolor="#000066" topmargin="2" leftmargin="0" marginwidth="0" marginheight="2">
 <table width="99%" align="center" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr bgcolor="#000066">
-	<td rowspan="2" height="78" width="211"><a href="/home/index.jsp?clickid=topnav_home_img"><img src="http://MOD.imageg.net/images/header_logo.gif" hspace="6" width="190" height="78" alt="" border="0"></a></td>
-	<td width="100%" height="45" align="right" class="topnavlink"><a href="/helpdesk/index.jsp?clickid=topnav_help_txt" class="topnavlink">HELP</a>&nbsp;|&nbsp;<a href="https://www.modells.com/coreg/index.jsp?step=register&amp;clickid=topnav_myacct_txt" class="topnavlink">MY ACCOUNT</a>&nbsp;|&nbsp;<a href="https://www.modells.com/coreg/index.jsp?step=ot&amp;clickid=topnav_track_txt" class="topnavlink">TRACK YOUR ORDER</a>&nbsp;|&nbsp;<a href="/corp/index.jsp?page=storeLocator&amp;clickid=topnav_locator_txt" class="topnavlink">FIND A STORE</a>&nbsp;|&nbsp;<a href="/corp/index.jsp?clickid=topnav_about_txt" class="topnavlink">ABOUT US</a>&nbsp;|&nbsp;<a href="/corp/index.jsp?page=jobs&amp;clickid=topnav_jobs_txt&amp;WebLogicSession=QL7oejEj9W5lvPR2s1lOObZJfGsA3TD5jAN58vuZo6lS8dkt4MOxAH5pRivRYbD0SXFgZfYZY2w3|-5864696086333609081/-1407580782/5/8880/8880/7002/7002/-1" class="topnavlink">CAREERS</a>&nbsp;&nbsp;</td>
+	<td rowspan="2" height="78" width="211"><a href="/home/index.jsp?clickid=topnav_home_img"><img src="http://MOD.imageg.net/images/header_holiday_logo_1204.gif" hspace="6" width="209" height="78" alt="" border="0"></a></td>
+	<td width="100%" height="45" align="right" class="topnavlink"><a href="/helpdesk/index.jsp?clickid=topnav_help_txt" class="topnavlink">HELP</a>&nbsp;|&nbsp;<a href="https://www.modells.com/coreg/index.jsp?step=register&amp;clickid=topnav_myacct_txt" class="topnavlink">MY ACCOUNT</a>&nbsp;|&nbsp;<a href="https://www.modells.com/coreg/index.jsp?step=ot&amp;clickid=topnav_track_txt" class="topnavlink">TRACK YOUR ORDER</a>&nbsp;|&nbsp;<a href="/corp/index.jsp?page=storeLocator&amp;clickid=topnav_locator_txt" class="topnavlink">FIND A STORE</a>&nbsp;|&nbsp;<a href="/corp/index.jsp?clickid=topnav_about_txt" class="topnavlink">ABOUT US</a>&nbsp;|&nbsp;<a href="/corp/index.jsp;jsessionid=B1AhCQx1LF7fQJFoZJnyvLggD74i24iudn21gwhMxjkydcsabOtM!2131923796?page=jobs" class="topnavlink">CAREERS</a>&nbsp;&nbsp;</td>
 </tr><tr bgcolor="#000066">
 	<td height="45" valign="bottom" align="right">
 	<table width="470" border="0" cellpadding="0" cellspacing="0" align="right">
@@ -54,6 +54,11 @@
 
     </td></tr>
 </tbody></table>
+<br>
+
+
+
+
 </td>
     </tr>
     <tr>
@@ -63,7 +68,21 @@
 <table border="0" width="99%" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" align="center">
     <tbody><tr>
         <td colspan="2" valign="top">
-            
+            <!--You are running on prod4_webstore_prod4app15_3-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <table width="98%" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr>
@@ -78,13 +97,19 @@
 		<table border="0">
 		<tbody><tr>
 			<td valign="top"><font class="subheadNumber">»</font> </td>
-			<td><a class="hd_pagelink" href="index.jsp?display=safety&amp;subdisplay=secure&amp;WebLogicSession=QL7oejEj9W5lvPR2s1lOObZJfGsA3TD5jAN58vuZo6lS8dkt4MOxAH5pRivRYbD0SXFgZfYZY2w3|-5864696086333609081/-1407580782/5/8880/8880/7002/7002/-1">Secure Shopping Guarantee</a></td>
+			<td><a class="hd_pagelink" href="index.jsp;jsessionid=B1AhCQx1LF7fQJFoZJnyvLggD74i24iudn21gwhMxjkydcsabOtM!2131923796?display=safety&amp;subdisplay=secure">Secure Shopping Guarantee</a></td>
 		</tr><tr>
 			<td valign="top"><font class="subheadNumber">»</font> </td>
-			<td><a class="hd_pagelink" href="index.jsp?display=safety&amp;subdisplay=terms&amp;WebLogicSession=QL7oejEj9W5lvPR2s1lOObZJfGsA3TD5jAN58vuZo6lS8dkt4MOxAH5pRivRYbD0SXFgZfYZY2w3|-5864696086333609081/-1407580782/5/8880/8880/7002/7002/-1">Terms &amp; Conditions</a></td>
+			<td><a class="hd_pagelink" href="index.jsp;jsessionid=B1AhCQx1LF7fQJFoZJnyvLggD74i24iudn21gwhMxjkydcsabOtM!2131923796?display=safety&amp;subdisplay=terms">Terms &amp; Conditions</a></td>
 		</tr><tr>
 			<td valign="top"><font class="subheadNumber">»</font> </td>
-			<td><a class="hd_pagelink" href="index.jsp?display=safety&amp;subdisplay=privacy&amp;WebLogicSession=QL7oejEj9W5lvPR2s1lOObZJfGsA3TD5jAN58vuZo6lS8dkt4MOxAH5pRivRYbD0SXFgZfYZY2w3|-5864696086333609081/-1407580782/5/8880/8880/7002/7002/-1">Privacy Policy</a></td>
+			<td><a class="hd_pagelink" href="index.jsp;jsessionid=B1AhCQx1LF7fQJFoZJnyvLggD74i24iudn21gwhMxjkydcsabOtM!2131923796?display=safety&amp;subdisplay=privacy">Privacy Policy</a></td>
+		</tr><tr>
+			<td valign="top"><font class="subheadNumber">»</font> </td>
+			<td><a href="index.jsp;jsessionid=B1AhCQx1LF7fQJFoZJnyvLggD74i24iudn21gwhMxjkydcsabOtM!2131923796?display=safety&amp;subdisplay=3dSecure&amp;topic=vbv" class="hd_pagelink">Verified by Visa </a></td>
+		</tr><tr>
+			<td valign="top"><font class="subheadNumber">»</font> </td>
+			<td><a href="index.jsp;jsessionid=B1AhCQx1LF7fQJFoZJnyvLggD74i24iudn21gwhMxjkydcsabOtM!2131923796?display=safety&amp;subdisplay=3dSecure&amp;topic=securecode" class="hd_pagelink">MasterCard SecureCode</a></td>
 		</tr></tbody></table></td>
 	</tr>
 	</tbody></table></td>
@@ -94,7 +119,8 @@
 
 
 <br><br>
-<!--You are running on prod3app13_4-->
+<!--You are running on prod4_webstore_prod4app15_3-->
+
 
 
 
