--- a/t/te/tee/teenfreeway.com.html
+++ b/t/te/tee/teenfreeway.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the teenfreeway.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606034944id_/http%3A//www.teenfreeway.com/newdesignfiles/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the teenfreeway.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207053419id_/http%3A//teenfreeway.com/newdesignfiles/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML//EN"><html><head><style type="text/css"><!--
     A:link {text-decoration: none} A:visited {text-decoration: none}
